--- a/src/pisi-lightdm-greeter.qrc
+++ b/src/pisi-lightdm-greeter.qrc
@@ -17,5 +17,6 @@
         <file>resources/keyboard.png</file>
         <file>resources/restart.png</file>
         <file>resources/sleep.png</file>
+        <file>resources/bgs/bg1.jpg</file>
     </qresource>
 </RCC>
