--- a/src/pisi-lightdm-greeter.qrc
+++ b/src/pisi-lightdm-greeter.qrc
@@ -17,6 +17,13 @@
         <file>resources/keyboard.png</file>
         <file>resources/restart.png</file>
         <file>resources/sleep.png</file>
+        <file>resources/battery_critical.png</file>
+        <file>resources/battery_full.png</file>
+        <file>resources/battery_good.png</file>
+        <file>resources/battery_low.png</file>
+        <file>resources/battery_normal.png</file>
+        <file>resources/right_arrow.png</file>
+        <file>resources/left_arrow.png</file>
         <file>resources/bgs/bg1.jpg</file>
     </qresource>
 </RCC>
